--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,4 +10,45 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  width: 100%;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 5px;
+  font-weight: normal;
+}
+
+div {
+  text-align: center;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.page {
+  height: 100%;
+  width: 100%;
+}
+
+.btn {
+  background: transparent;
+  padding: 15px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 15px;
+  opacity: 1;
+  transition: opacity 300ms ease;
+}
+
+.touched {
+  opacity: 0.5;
 }
