--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 html,
 body,
 canvas,
-.page,
+#pageContainer,
+#page,
+#canvasContainer,
 #root {
   height: 100%;
   width: 100%;
@@ -47,7 +49,18 @@ div {
   opacity: 0.5;
 }
 
-#canvasContainer {
+#page {
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#pageContainer {
+  position: relative;
+}
+#canvasContainer,
+#page {
   position: absolute;
   top: 0;
   left: 0;
